--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: n2d-build
-          path: ./public
+          path: public/
   publish:
     needs: build
     runs-on: ubuntu-latest
@@ -42,5 +42,4 @@ jobs:
         env:
           HOST: n2d.io
           KEY: ${{secrets.N2D_DEPLOY_SSH_KEY}}
-          SOURCE: public/
           TARGET: /var/www/n2d.io/
